# iron-cms-api

./: .editorconfig  Cargo.toml
migrations/2024-02-27-132636_create_users_table/: up.sql
migrations/2024-02-27-133002_create_admin_permissions_table/: down.sql  up.sql
src/: constants.rs  container.rs  create_app.rs  env_check.rs  error_codes.rs  lib.rs  main.rs
src/api/controllers/: admin_permission_handler.rs  mod.rs  user_handler.rs
src/api/dto/: admin_permission.rs  user.rs
src/domain/: error.rs  mod.rs
src/domain/models/: admin_permission.rs  auth.rs  common.rs  mod.rs  session.rs  user.rs
src/domain/repositories/: admin_permission.rs  mod.rs  user.rs
src/domain/services/: admin_permission.rs  auth.rs  mod.rs  user.rs
src/infrastructure/: mod.rs  schema.rs
src/infrastructure/database/: postgresql.rs
src/infrastructure/models/: admin_permission.rs  mod.rs  user.rs
src/infrastructure/repositories/: admin_permission.rs  user.rs
src/infrastructure/services/: admin_permission.rs  mod.rs  user.rs
src/services/: constants.rs  error.rs  mod.rs
src/services/concrete/: argon2id_hash.rs  mod.rs
src/services/traits/: password_hash.rs
src/services/utils/: envutil.rs  format.rs  mod.rs
