[package]
name = "iron-cms-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-threadpool = "0.3.3"
actix-web = "4.5.1"
ansi_term = "0.12.1"
argon2 = "0.5.3"
async-graphql = { version = "7.0.2", features = ["bson", "chrono"] }
async-graphql-actix-web = "7.0.2"
async-trait = "0.1.77"
bson = "2.9.0"
chrono = { version = "0.4.35", features = ["serde"] }
derive = "1.0.0"
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
futures-util = "0.3.30"
postgres = "0.19.7"
r2d2 = "0.8.10"
rand_core = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
testcontainers = "0.15.0"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std", "registry"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
